--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="row">
 				<div class="col-6">
 					<div class="logo">
-						<img src="images/EARTH-STORE-200x35.png">
+						<img src="Images/EARTH-STORE-200x35.png">
 					</div>
 				</div>
 				<div class="col-4">
@@ -51,7 +51,7 @@
 			<div class="row">
 				<div class="col-4">
 					<div class="pict1">
-						<img src="images/Poster5-1000x1000.jpg">
+						<img src="Images/Poster5-1000x1000.jpg">
 						<p>Posters</p>
 						<a>Poster V1</a>
 						<h1>$23.99</h1>
@@ -59,7 +59,7 @@
 				</div>
 				<div class="col-4">
 					<div class="pict1">
-						<img src="images/Poster6-1000x1000.jpg">
+						<img src="Images/Poster6-1000x1000.jpg">
 						<p>Posters</p>
 						<a>Poster V2</a>
 						<h1>$17.99</h1>
@@ -67,7 +67,7 @@
 				</div>
 				<div class="col-4">
 					<div class="pict1">
-						<img src="images/Poster4-1000x1000.jpg">
+						<img src="Images/Poster4-1000x1000.jpg">
 						<p>Posters</p>
 						<a>Poster V3</a>
 						<h1>$14.99</h1>
@@ -87,21 +87,21 @@
 					<i class='bx bxs-quote-left'></i>
 					<p>Fast shipping and excellent customer<br> service. The product was even better<br> than expected.
 						I will definitely be a<br> returning customer.</p>
-					<img src="images/earth-store-testimonial-avatar-img.jpeg">
+					<img src="Images/earth-store-testimonial-avatar-img.jpeg">
 					<h5>JENNIFER LEWIS</h5>
 				</div>
 				<div class="col-4">
 					<i class='bx bxs-quote-left' style='color:#2c541d'></i>
 					<p>Great user experience on your website.<br> I found exactly what I was looking for<br> at a great
 						price. I will definitely be<br> telling my friends.</p>
-					<img src="images/earth-store-testimonials-avatar-img-2.jpeg">
+					<img src="Images/earth-store-testimonials-avatar-img-2.jpeg">
 					<h5>ALICIA HEART</h5>
 				</div>
 				<div class="col-4">
 					<i class='bx bxs-quote-left' style='color:#2c541d'></i>
 					<p>Thank you for the excellent shopping<br> experience. It arrived quickly and was<br> exactly as
 						described. I will definitely be<br> shopping with you again in the future.</p>
-					<img src="images/earth-store-testimonials-avatar-img-1.jpeg">
+					<img src="Images/earth-store-testimonials-avatar-img-1.jpeg">
 					<h5>JUAN CARLOS</h5>
 				</div>
 			</div>
@@ -174,7 +174,7 @@
 					<img src="images/EARTH-STORE-200x35.png">
 				</div>
 				<div class="col-4">
-					<p>Copyright © 2023 Planet Earth Store</p>
+					<p>Ganesh Kekan</p>
 				</div>
 			</div>
 		</div>
